Fixed issued in IE11 with jumping grid

--- a/src/less/src/grid.less
+++ b/src/less/src/grid.less
@@ -566,6 +566,22 @@
             }
         }
     }
+
+    .w2ui-grid-focus-input {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        opacity: 0;
+        // needed for IE11
+        padding: 0px;
+        margin: 0px;
+        width: 1px;
+        height: 1px;
+        resize: none;
+        border: 0px;
+        // --
+    }
 }
 
 /* SpeadSheet */
